# polhemus_ros_driver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aws.yml  package.xml  readme.md  repository.rosinstall  setup.py
action/: Calibrate.action
config/: liberty_calibration.yaml  viper_calibration.yaml
config/shadow_glove_user_calibration_defaults/: default_calibration_left.yaml  default_calibration_right.yaml
etc/: 90-Polhemus_trkr.rules  install.bash
include/polhemus_ros/: polhemus_ros.h
include/polhemus_ros_driver/: copyright_exclusions.cfg  liberty.hpp  liberty_protocol.h  polhemus.hpp  viper.hpp  viper_protocol.h
launch/: polhemus.launch  polhemus.launch.xml  polhemus_mock.launch  polhemus_world_static_transform.launch  start.launch
src/: calibration_server.cpp  liberty.cpp  polhemus.cpp  polhemus_ros.cpp  polhemus_ros_node.cpp  polhemus_tf_broadcaster.cpp  viper.cpp
src/polhemus_ros_driver/: copyright_exclusions.cfg  knuckle_position_calibration_action_server.py  liberty.cpp  polhemus.cpp  polhemus_tf_broadcaster.cpp  publish_static_knuckle_tf.py  source_pose_calibration.py  sphere_fit.py  viper.cpp
srv/: Publish.srv  SetStaticCalibrationTF.srv  SetStaticCalibrationTFNew.srv  calibrate.srv  persist.srv  set_source.srv
test/: test_sphere_fit.py  test_sphere_fit.test
